# lambderpreter

./: Main.hs  README.md  lambderpreter.cabal  stack.yaml
