name:                lambderpreter
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable lambderpreter
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       parsec,
                       bytestring,
                       either,
                       unbound,
                       transformers,
                       haskeline
